# lab-2-13

./: CMakeLists.txt  README.md  main.cpp  test.txt
inc/: camera.hpp  matrix.hpp  scene.hpp
src/: camera.cpp  scene.cpp
